# slack-q

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.sh
